--- a/style.css
+++ b/style.css
@@ -16,8 +16,33 @@
 	height: 250px;
 }
 
+#news
+{
+	border:3px solid black;
+	background-color: #EEE9E9;
+}
+
+#collage
+{
+	border:5px solid black;
+}
 
 .headr
 {
 	background-color: #EEE9E9;
+}
+
+.last 
+{
+    background-color: #EEE9E9;
+    height: 110px;
+}
+
+.last ul li 
+{
+    list-style: none;
+    float: left;
+    margin-left: 90px;
+    padding-right: 10px;
+    margin-top: 30px;
 }
