--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,18 @@
+/*Header Section*/
+.headr
+{
+	background-color: #EEE9E9;
+}
 
-
+/*Carusel Section*/
 .photos 
 {
 	height: 650px;
 	width: 100%;
+	margin-top:10% 
 }
 
+/*News Card Section*/
 .card
 {
 	height:450px;
@@ -16,33 +23,21 @@
 	height: 250px;
 }
 
+/*News Section*/
 #news
 {
 	border:3px solid black;
 	background-color: #EEE9E9;
 }
 
-#collage
+/*Footer Section*/
+.Footer
 {
-	border:5px solid black;
+    background-color: black;
 }
 
-.headr
+.Footer ul li
 {
-	background-color: #EEE9E9;
+	list-style: none;
 }
 
-.last 
-{
-    background-color: #EEE9E9;
-    height: 110px;
-}
-
-.last ul li 
-{
-    list-style: none;
-    float: left;
-    margin-left: 90px;
-    padding-right: 10px;
-    margin-top: 30px;
-}
